--- a/rentingCar/package.json
+++ b/rentingCar/package.json
@@ -23,6 +23,7 @@
     "@vaadin/vaadin-themable-mixin": "24.7.3",
     "@vaadin/vaadin-usage-statistics": "2.1.3",
     "construct-style-sheets-polyfill": "3.1.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "2.29.3",
     "lit": "3.2.1",
     "proj4": "2.15.0",
@@ -168,6 +169,6 @@
     "react-router-dom": "$react-router-dom"
   },
   "scripts": {
-  "build": "vite build"
+    "build": "vite build"
   }
 }
