--- a/rentingCar/package.json
+++ b/rentingCar/package.json
@@ -37,6 +37,7 @@
     "@preact/signals-react-transform": "0.5.1",
     "@rollup/plugin-replace": "6.0.2",
     "@rollup/pluginutils": "5.1.4",
+    "@types/crypto-js": "^4.2.2",
     "@types/react": "18.3.20",
     "@types/react-dom": "18.3.6",
     "@vaadin/hilla-generator-cli": "24.7.2",
